tests/reference/asr-generics_04-2dc1ebc.stderr
semantic error: Error
  --> tests/../integration_tests/generics_04.py:11:7
   |
11 | print(f("a"))
   |       ^^^^^^ 
